--- a/src/view/add/add.fxml
+++ b/src/view/add/add.fxml
@@ -10,8 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.addMovies.AddMoviesController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@AddMovies.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.add.AddMoviesController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#663cfd" height="720.0" stroke="BLACK" strokeType="INSIDE" width="1280.0" />
       <JFXButton layoutX="55.0" layoutY="150.0" prefHeight="238.0" prefWidth="185.0" ripplerFill="#9a7eff" style="-fx-background-color: #2300A0;" text=" " />
@@ -26,22 +25,22 @@
          </font>
       </Text>
       <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#2300a0" height="280.0" layoutX="330.0" layoutY="388.0" stroke="BLACK" strokeType="INSIDE" width="816.0" />
-      <JFXTextArea focusColor="BLACK" layoutX="348.0" layoutY="399.0" prefHeight="261.0" prefWidth="785.0" promptText="Sinopse:" style="-fx-font-style: #FFFFFF;" unFocusColor="#ff000000" wrapText="true">
+      <JFXTextArea focusColor="BLACK" layoutX="348.0" layoutY="399.0" prefHeight="261.0" prefWidth="785.0" promptText="Sinopse:" unFocusColor="#ff000000" wrapText="true">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </JFXTextArea>
-      <JFXTextField focusColor="WHITE" labelFloat="true" layoutX="330.0" layoutY="192.0" prefWidth="331.0" promptText="Nome:" unFocusColor="WHITE">
+      <JFXTextField focusColor="WHITE" labelFloat="true" layoutX="330.0" layoutY="192.0" prefWidth="331.0" promptText="Nome:" unFocusColor="#4717f6">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </JFXTextField>
-      <JFXTextField focusColor="WHITE" labelFloat="true" layoutX="815.0" layoutY="192.0" prefWidth="331.0" promptText="Gênero:" unFocusColor="WHITE">
+      <JFXTextField focusColor="WHITE" labelFloat="true" layoutX="815.0" layoutY="192.0" prefWidth="331.0" promptText="Gênero:" unFocusColor="#4717f6">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </JFXTextField>
-      <JFXTextField focusColor="WHITE" labelFloat="true" layoutX="330.0" layoutY="298.0" prefWidth="331.0" promptText="Nota:" unFocusColor="WHITE">
+      <JFXTextField focusColor="WHITE" labelFloat="true" layoutX="330.0" layoutY="298.0" prefWidth="331.0" promptText="Nota:" unFocusColor="#4717f6">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
