--- a/src/view/list/infomovies.fxml
+++ b/src/view/list/infomovies.fxml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextArea?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="738.0" style="-fx-background-color: #4717F6;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.list.InfoMoviesController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="738.0" style="-fx-background-color: #4717F6;" stylesheets="@../add/AddMovies.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.list.InfoMoviesController">
    <children>
       <Pane layoutX="78.0" layoutY="298.0" prefHeight="43.0" prefWidth="110.0" style="-fx-background-color: yellow; -fx-border-radius: 40; -fx-background-radius: 40;" />
       <ImageView fx:id="imgMovie" fitHeight="260.0" fitWidth="200.0" layoutX="37.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
@@ -32,13 +31,9 @@
             <Font size="15.0" />
          </font>
       </Label>
-      <Pane layoutX="290.0" layoutY="177.0" prefHeight="238.0" prefWidth="412.0">
+      <Pane layoutX="290.0" layoutY="177.0" prefHeight="238.0" prefWidth="412.0" style="-fx-background-color: #19016E; -fx-background-radius: 20;">
          <children>
-            <TextArea fx:id="txtaSinopse" editable="false" prefHeight="238.0" prefWidth="412.0" wrapText="true">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </TextArea>
+            <JFXTextArea fx:id="txtaSinopse" editable="false" focusColor="#405aa800" layoutX="19.0" layoutY="10.0" prefHeight="211.0" prefWidth="372.0" style="-fx-border-radius: 20; -fx-background-radius: 20; -fx-border-radius: 20;" unFocusColor="#4d4d4d00" />
          </children>
       </Pane>
       <Label fx:id="lbSinopse" layoutX="290.0" layoutY="149.0" text="Sinopse" textFill="WHITE">
