--- a/src/view/adm/adm.fxml
+++ b/src/view/adm/adm.fxml
@@ -39,7 +39,7 @@
          </padding>
       </JFXButton>
       <Line fx:id="lineAddMovies" endX="30.25" layoutX="620.0" layoutY="395.0" startX="-51.5" stroke="#663cfd" />
-      <JFXButton fx:id="btnUpdateMovies" focusTraversable="false" layoutX="535.0" layoutY="429.0" prefHeight="39.0" prefWidth="100.0" text="Alterar " textFill="WHITE">
+      <JFXButton fx:id="btnUpdateMovies" focusTraversable="false" layoutX="535.0" layoutY="429.0" onAction="#updateMovie" prefHeight="39.0" prefWidth="100.0" text="Alterar " textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
@@ -47,7 +47,7 @@
             <Insets right="-34.0" />
          </padding>
       </JFXButton>
-      <Line fx:id="lineAddMovies" endX="6.5" layoutX="622.0" layoutY="457.0" startX="-51.5" stroke="#663cfd" />
+      <Line fx:id="lineUpdateMovies" endX="6.5" layoutX="622.0" layoutY="457.0" startX="-51.5" stroke="#663cfd" />
       <JFXButton fx:id="btnRemoveMovies" focusTraversable="false" layoutX="537.0" layoutY="493.0" prefHeight="39.0" prefWidth="111.0" text="Remover " textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
