--- a/src/view/add/add.fxml
+++ b/src/view/add/add.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextArea?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.image.Image?>
@@ -25,32 +26,27 @@
          </font>
       </Text>
       <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#2300a0" height="280.0" layoutX="330.0" layoutY="388.0" stroke="BLACK" strokeType="INSIDE" width="816.0" />
-      <JFXTextArea focusColor="#ffffff00" layoutX="348.0" layoutY="399.0" prefHeight="261.0" prefWidth="785.0" promptText="Sinopse" unFocusColor="#ffffff00" wrapText="true">
+      <JFXTextArea fx:id="txtaSinopse" focusColor="#ffffff00" layoutX="348.0" layoutY="399.0" prefHeight="261.0" prefWidth="785.0" promptText="Sinopse" unFocusColor="#ffffff00" wrapText="true">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </JFXTextArea>
-      <JFXTextField focusColor="WHITE" labelFloat="true" layoutX="330.0" layoutY="192.0" prefWidth="331.0" promptText="Nome:" unFocusColor="#4717f6">
+      <JFXTextField fx:id="txtfName" focusColor="WHITE" labelFloat="true" layoutX="330.0" layoutY="192.0" prefWidth="331.0" promptText="Nome:" unFocusColor="#4717f6">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </JFXTextField>
-      <JFXTextField focusColor="WHITE" labelFloat="true" layoutX="815.0" layoutY="192.0" prefWidth="331.0" promptText="Gênero:" unFocusColor="#4717f6">
+      <JFXTextField fx:id="txtfDirector" focusColor="WHITE" labelFloat="true" layoutX="815.0" layoutY="192.0" prefWidth="331.0" promptText="Diretor:" unFocusColor="#4717f6">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </JFXTextField>
-      <JFXTextField focusColor="WHITE" labelFloat="true" layoutX="330.0" layoutY="298.0" prefWidth="331.0" promptText="Nota:" unFocusColor="#4717f6">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-      </JFXTextField>
-      <JFXButton fx:id="btnCadastro" layoutX="55.0" layoutY="617.0" onAction="#cadastrar" prefHeight="44.0" prefWidth="185.0" style="-fx-background-color: #FFFFFF;" text="Cadastrar" textFill="#663cfd">
+      <JFXButton fx:id="btnCreate" layoutX="55.0" layoutY="617.0" onAction="#createMovie" prefHeight="44.0" prefWidth="185.0" style="-fx-background-color: #FFFFFF;" text="Cadastrar" textFill="#663cfd">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="btnQuick" alignment="CENTER_RIGHT" layoutX="1146.0" layoutY="64.0" onAction="#backHomeAdm" prefHeight="34.0" prefWidth="81.0" style="-fx-background-color: #2300a0;" text="Sair" textFill="WHITE">
+      <JFXButton fx:id="btnQuit" alignment="CENTER_RIGHT" layoutX="1146.0" layoutY="64.0" onAction="#backHomeAdm" prefHeight="34.0" prefWidth="81.0" style="-fx-background-color: #2300a0;" text="Sair" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
@@ -60,5 +56,11 @@
             <Image url="@../resources/x_icon.png" />
          </image>
       </ImageView>
+      <JFXTextField fx:id="txtfMinAge" focusColor="WHITE" labelFloat="true" layoutX="815.0" layoutY="318.0" prefWidth="331.0" promptText="Idade Minima:" unFocusColor="#4717f6">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </JFXTextField>
+      <JFXComboBox fx:id="cbGenre" focusColor="#405aa800" layoutX="330.0" layoutY="312.0" prefHeight="51.0" prefWidth="213.0" promptText="Gênero" style="-fx-background-color: #2300A0;" unFocusColor="#4d4d4d00" />
    </children>
 </AnchorPane>
