--- a/src/view/update/update.fxml
+++ b/src/view/update/update.fxml
@@ -51,7 +51,7 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="btnQuick" alignment="CENTER_RIGHT" layoutX="1146.0" layoutY="64.0" onAction="#backHomeAdm" prefHeight="34.0" prefWidth="81.0" style="-fx-background-color: #2300a0;" text="Sair" textFill="WHITE">
+      <JFXButton fx:id="btnQuit" alignment="CENTER_RIGHT" layoutX="1146.0" layoutY="64.0" onAction="#backHomeAdm" prefHeight="34.0" prefWidth="81.0" style="-fx-background-color: #2300a0;" text="Sair" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
