--- a/src/view/list/list.fxml
+++ b/src/view/list/list.fxml
@@ -29,12 +29,18 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="txtfSearch" focusColor="WHITE" layoutX="90.0" layoutY="20.0" prefHeight="32.0" prefWidth="242.0" promptText="Pesquisa" unFocusColor="#663cfd">
+            <JFXTextField fx:id="txtfSearch" focusColor="WHITE" layoutX="90.0" layoutY="20.0" prefHeight="51.0" prefWidth="570.0" promptText="Pesquisa" unFocusColor="#663cfd">
                <font>
                   <Font size="24.0" />
                </font>
             </JFXTextField>
             <ImageView fx:id="imgSearch" fitHeight="30.0" fitWidth="30.0" layoutX="43.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../resources/search.png" />
+               </image>
+            </ImageView>
+            <JFXButton fx:id="btnSearch" layoutX="31.0" layoutY="21.0" onAction="#searchMovies" prefHeight="51.0" prefWidth="52.0" ripplerFill="#af99ff" style="-fx-background-color: #2300A0;" text=" " />
+            <ImageView disable="true" fitHeight="35.0" fitWidth="38.0" layoutX="39.0" layoutY="29.0">
                <image>
                   <Image url="@../resources/search.png" />
                </image>
