--- a/src/view/list/infomovies.fxml
+++ b/src/view/list/infomovies.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextArea?>
+<?import com.jfoenix.controls.JFXToggleButton?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -10,7 +11,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="738.0" style="-fx-background-color: #4717F6;" stylesheets="@../add/AddMovies.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.list.InfoMoviesController">
    <children>
-      <Pane layoutX="78.0" layoutY="298.0" prefHeight="43.0" prefWidth="110.0" style="-fx-background-color: yellow; -fx-border-radius: 40; -fx-background-radius: 40;" />
+      <Pane layoutX="30.0" layoutY="296.0" prefHeight="43.0" prefWidth="88.0" style="-fx-background-color: yellow; -fx-border-radius: 40; -fx-background-radius: 40;" />
       <ImageView fx:id="imgMovie" fitHeight="260.0" fitWidth="200.0" layoutX="37.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../resources/potter.png" />
@@ -41,20 +42,21 @@
             <Font size="15.0" />
          </font>
       </Label>
-      <JFXButton layoutX="74.0" layoutY="372.0" prefHeight="35.0" prefWidth="126.0" style="-fx-background-color: #19016E;" text="Avaliar Filme" textFill="WHITE">
+      <JFXButton layoutX="147.0" layoutY="300.0" prefHeight="35.0" prefWidth="126.0" style="-fx-background-color: #19016E;" text="Avaliar Filme" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
       </JFXButton>
-      <Label fx:id="lbRate" layoutX="102.0" layoutY="302.0" text="10">
+      <Label fx:id="lbRate" layoutX="32.0" layoutY="300.0" text="10">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Label layoutX="128.0" layoutY="302.0" text="/10">
+      <Label layoutX="58.0" layoutY="300.0" text="/10">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
+      <JFXToggleButton fx:id="favoriteButton" layoutX="72.0" layoutY="357.0" onAction="#addFavorite" text="Meus Favoritos" />
    </children>
 </Pane>
