--- a/src/view/list/list.fxml
+++ b/src/view/list/list.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import com.jfoenix.controls.JFXToggleButton?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
@@ -35,7 +36,7 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="txtfSearch" focusColor="WHITE" layoutX="90.0" layoutY="20.0" prefHeight="51.0" prefWidth="570.0" promptText="Pesquisa" unFocusColor="#663cfd">
+            <JFXTextField fx:id="txtfSearch" focusColor="WHITE" layoutX="90.0" layoutY="20.0" prefHeight="51.0" prefWidth="498.0" promptText="Pesquisa" unFocusColor="#663cfd">
                <font>
                   <Font size="24.0" />
                </font>
@@ -51,6 +52,11 @@
                   <Image url="@../resources/search.png" />
                </image>
             </ImageView>
+            <JFXToggleButton fx:id="tgbDirector" layoutX="588.0" layoutY="15.0" onAction="#isDirector" text="ToggleButton" textFill="WHITE" toggleColor="#4717f6" toggleLineColor="#4717f6">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </JFXToggleButton>
          </children>
       </Pane>
       <VBox layoutY="86.0" prefHeight="638.0" prefWidth="242.0" style="-fx-background-color: #4717F6;">
@@ -95,7 +101,7 @@
                   <Font size="18.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="btnBestRatings" alignment="BASELINE_LEFT" onAction="#favoriteMovies" prefHeight="74.0" prefWidth="242.0" text="Favoritos" textFill="WHITE">
+            <JFXButton fx:id="btnBestRatings" alignment="BASELINE_LEFT" onAction="#bestRatingsMovies" prefHeight="74.0" prefWidth="242.0" text="Melhores Notas" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
