--- a/src/view/list/infomovies.fxml
+++ b/src/view/list/infomovies.fxml
@@ -11,7 +11,12 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="738.0" style="-fx-background-color: #4717F6;" stylesheets="@../add/AddMovies.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.list.InfoMoviesController">
    <children>
-      <Pane layoutX="30.0" layoutY="296.0" prefHeight="43.0" prefWidth="88.0" style="-fx-background-color: yellow; -fx-border-radius: 40; -fx-background-radius: 40;">
+      <ImageView fx:id="imgMovie" fitHeight="260.0" fitWidth="200.0" layoutX="37.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../resources/potter.png" />
+         </image>
+      </ImageView>
+      <Pane layoutX="93.0" layoutY="265.0" prefHeight="43.0" prefWidth="88.0" style="-fx-background-color: yellow; -fx-border-radius: 40; -fx-background-radius: 40;">
          <children>
             <Label fx:id="lbRate" layoutX="14.0" layoutY="4.0" text="10">
                <font>
@@ -24,11 +29,6 @@
                </font>
             </Label>
          </children></Pane>
-      <ImageView fx:id="imgMovie" fitHeight="260.0" fitWidth="200.0" layoutX="37.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../resources/potter.png" />
-         </image>
-      </ImageView>
       <Label fx:id="lbTitle" layoutX="290.0" layoutY="40.0" text="Title" textFill="WHITE">
          <font>
             <Font size="24.0" />
@@ -54,14 +54,24 @@
             <Font size="15.0" />
          </font>
       </Label>
-      <JFXButton layoutX="147.0" layoutY="300.0" prefHeight="35.0" prefWidth="126.0" style="-fx-background-color: #19016E;" text="Avaliar Filme" textFill="WHITE">
+      <JFXButton layoutX="74.0" layoutY="364.0" prefHeight="35.0" prefWidth="126.0" style="-fx-background-color: #19016E;" text="Avaliar Filme" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
       </JFXButton>
-      <JFXToggleButton fx:id="favoriteButton" layoutX="38.0" layoutY="353.0" onAction="#addFavorite" text="Meus Favoritos" textFill="WHITE">
+      <JFXToggleButton fx:id="favoriteButton" layoutX="511.0" layoutY="27.0" onAction="#addFavorite" text="Meus Favoritos" textFill="WHITE">
          <font>
             <Font size="18.0" />
          </font></JFXToggleButton>
+      <Label layoutX="289.0" layoutY="110.0" text="Diretor:" textFill="WHITE">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label fx:id="lbDirector" layoutX="349.0" layoutY="110.0" text="Director" textFill="#bfbfbf">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
