--- a/src/view/list/infomovies.fxml
+++ b/src/view/list/infomovies.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextArea?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXToggleButton?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -16,14 +17,9 @@
             <Image url="@../resources/potter.png" />
          </image>
       </ImageView>
-      <Pane layoutX="93.0" layoutY="265.0" prefHeight="43.0" prefWidth="88.0" style="-fx-background-color: yellow; -fx-border-radius: 40; -fx-background-radius: 40;">
+      <Pane layoutX="100.0" layoutY="265.0" prefHeight="43.0" prefWidth="74.0" style="-fx-background-color: yellow; -fx-border-radius: 40; -fx-background-radius: 40;">
          <children>
-            <Label fx:id="lbRate" layoutX="14.0" layoutY="4.0" text="10">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
-            <Label layoutX="40.0" layoutY="4.0" text="/10">
+            <Label fx:id="lbRate" alignment="CENTER" contentDisplay="CENTER" layoutX="-3.0" layoutY="4.0" prefHeight="35.0" prefWidth="81.0" text="10.0">
                <font>
                   <Font size="24.0" />
                </font>
@@ -44,9 +40,9 @@
             <Font size="15.0" />
          </font>
       </Label>
-      <Pane layoutX="290.0" layoutY="177.0" prefHeight="238.0" prefWidth="412.0" style="-fx-background-color: #19016E; -fx-background-radius: 20;">
+      <Pane layoutX="290.0" layoutY="177.0" prefHeight="251.0" prefWidth="412.0" style="-fx-background-color: #19016E; -fx-background-radius: 20;">
          <children>
-            <JFXTextArea fx:id="txtaSinopse" editable="false" focusColor="#405aa800" layoutX="19.0" layoutY="10.0" prefHeight="211.0" prefWidth="372.0" style="-fx-border-radius: 20; -fx-background-radius: 20; -fx-border-radius: 20;" unFocusColor="#4d4d4d00" />
+            <JFXTextArea fx:id="txtaSinopse" editable="false" focusColor="#405aa800" layoutX="19.0" layoutY="10.0" prefHeight="229.0" prefWidth="372.0" style="-fx-border-radius: 20; -fx-background-radius: 20; -fx-border-radius: 20;" unFocusColor="#4d4d4d00" />
          </children>
       </Pane>
       <Label fx:id="lbSinopse" layoutX="290.0" layoutY="149.0" text="Sinopse" textFill="WHITE">
@@ -54,7 +50,7 @@
             <Font size="15.0" />
          </font>
       </Label>
-      <JFXButton layoutX="74.0" layoutY="364.0" prefHeight="35.0" prefWidth="126.0" style="-fx-background-color: #19016E;" text="Avaliar Filme" textFill="WHITE">
+      <JFXButton fx:id="btnRate" layoutX="74.0" layoutY="380.0" onAction="#makeRate" prefHeight="35.0" prefWidth="126.0" style="-fx-background-color: #19016E;" text="Avaliar Filme" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
@@ -73,5 +69,6 @@
             <Font size="15.0" />
          </font>
       </Label>
+      <JFXTextField fx:id="txtfRate" alignment="CENTER" focusColor="WHITE" layoutX="70.0" layoutY="330.0" promptText="Sua Nota:" unFocusColor="WHITE" />
    </children>
 </Pane>
