--- a/src/view/adm/adm.fxml
+++ b/src/view/adm/adm.fxml
@@ -90,7 +90,7 @@
             <Image url="@../resources/x_icon.png" />
          </image>
       </ImageView>
-      <JFXButton fx:id="btnChangeDatas" alignment="CENTER" focusTraversable="false" layoutX="37.0" layoutY="20.0" prefHeight="28.0" prefWidth="114.0" style="-fx-background-color: #663CFD;" text="Alterar Perfil" textAlignment="RIGHT" textFill="WHITE">
+      <JFXButton fx:id="btnChangeDatas" alignment="CENTER" focusTraversable="false" layoutX="37.0" layoutY="20.0" onAction="#changeData" prefHeight="28.0" prefWidth="114.0" style="-fx-background-color: #663CFD;" text="Alterar Perfil" textAlignment="RIGHT" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
