--- a/src/view/changedata/ChangeData.fxml
+++ b/src/view/changedata/ChangeData.fxml
@@ -19,12 +19,12 @@
          </image>
       </ImageView>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#0a002c" height="720.0" layoutX="484.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="796.0" />
-      <JFXTextField fx:id="txtfUser" focusColor="#4717f6" layoutX="528.0" layoutY="139.0" prefHeight="51.0" prefWidth="318.0" promptText="Nome de usuário" unFocusColor="#4717f6">
+      <JFXTextField fx:id="txtfUser" focusColor="WHITE" labelFloat="true" layoutX="528.0" layoutY="139.0" prefHeight="51.0" prefWidth="318.0" promptText="Nome de usuário" unFocusColor="#4717f6">
          <font>
             <Font size="24.0" />
          </font>
       </JFXTextField>
-      <JFXTextField fx:id="txtfEmail" focusColor="#4717f6" layoutX="528.0" layoutY="290.0" prefHeight="51.0" prefWidth="704.0" promptText="E-mail" unFocusColor="#4717f6">
+      <JFXTextField fx:id="txtfEmail" focusColor="WHITE" labelFloat="true" layoutX="528.0" layoutY="290.0" prefHeight="51.0" prefWidth="704.0" promptText="E-mail" unFocusColor="#4717f6">
          <font>
             <Font size="24.0" />
          </font>
@@ -35,12 +35,12 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </JFXButton>
-      <JFXPasswordField fx:id="pfPass" focusColor="#4717f6" layoutX="527.0" layoutY="450.0" prefHeight="51.0" prefWidth="318.0" promptText="Nova senha" unFocusColor="#4717f6">
+      <JFXPasswordField fx:id="pfPass" focusColor="WHITE" labelFloat="true" layoutX="527.0" layoutY="450.0" prefHeight="51.0" prefWidth="318.0" promptText="Nova senha" unFocusColor="#4717f6">
          <font>
             <Font size="24.0" />
          </font>
       </JFXPasswordField>
-      <JFXPasswordField fx:id="pfConfirmPass" focusColor="#4717f6" layoutX="910.0" layoutY="450.0" prefHeight="51.0" prefWidth="318.0" promptText="Confirmar nova senha" unFocusColor="#4717f6">
+      <JFXPasswordField fx:id="pfConfirmPass" focusColor="WHITE" labelFloat="true" layoutX="910.0" layoutY="450.0" prefHeight="51.0" prefWidth="318.0" promptText="Confirmar nova senha" unFocusColor="#4717f6">
          <font>
             <Font size="24.0" />
          </font>
@@ -55,29 +55,9 @@
             <Image url="@../resources/x_purple_icon.png" />
          </image>
       </ImageView>
-      <Label layoutX="528.0" layoutY="90.0" text="Nome de Usuário:" textFill="WHITE">
+      <Label layoutX="911.0" layoutY="109.0" text="Data de Nascimento:" textFill="WHITE">
          <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="528.0" layoutY="242.0" text="E-mail:" textFill="WHITE">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="529.0" layoutY="407.0" text="Senha:" textFill="WHITE">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="910.0" layoutY="90.0" text="Data de Nascimento:" textFill="WHITE">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="910.0" layoutY="407.0" text="Confirmar Senha:" textFill="WHITE">
-         <font>
-            <Font size="24.0" />
+            <Font size="21.0" />
          </font>
       </Label>
    </children>
