--- a/src/view/register/register.fxml
+++ b/src/view/register/register.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #0A002C;" stylesheets="@Register.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.register.RegisterController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: white;" stylesheets="@Register.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.register.RegisterController">
    <children>
       <Pane layoutX="-22.0" prefHeight="720.0" prefWidth="838.0" style="-fx-background-color: white;">
          <children>
@@ -57,14 +57,9 @@
             <JFXDatePicker fx:id="dtBirthDate" defaultColor="#4717f6" layoutX="453.0" layoutY="250.0" prefWidth="318.0" promptText="Data Nascimento" />
          </children>
       </Pane>
-      <ImageView fitHeight="726.0" fitWidth="545.0" layoutX="737.0" layoutY="-7.0">
+      <ImageView fitHeight="690.0" fitWidth="510.0" layoutX="776.0">
          <image>
-            <Image url="@../resources/register_art.png" />
-         </image>
-      </ImageView>
-      <ImageView layoutX="1210.0" layoutY="640.0">
-         <image>
-            <Image url="@../resources/O.png" />
+            <Image url="@../resources/Group%204.png" />
          </image>
       </ImageView>
    </children>
