--- a/src/view/principal/main.fxml
+++ b/src/view/principal/main.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -23,11 +23,7 @@
         </Pane>
         <Pane layoutX="71.0" prefHeight="72.0" prefWidth="1210.0" style="-fx-background-color: #663CFD;">
             <children>
-                <Button fx:id="btnLogin" layoutX="1013.0" layoutY="19.0" mnemonicParsing="false" onAction="#clickLogin" prefHeight="34.0" prefWidth="120.0" styleClass="btnLogin" stylesheets="@Main.css" text="Login" textFill="WHITE">
-                    <font>
-                        <Font name="Nirmala UI" size="12.0" />
-                    </font>
-                </Button>
+            <JFXButton fx:id="btnLogin" layoutX="1013.0" layoutY="19.0" onAction="#clickLogin" prefHeight="30.0" prefWidth="120.0" styleClass="btnLogin" text="Login" textFill="WHITE" />
             </children>
         </Pane>
         <Label fx:id="lbWelcome" layoutX="46.0" layoutY="238.0" styleClass="lbWelcome" stylesheets="@Main.css" text="Ocarina">
@@ -37,15 +33,10 @@
         <Label fx:id="lbApresentacao" layoutX="57.0" layoutY="347.0" styleClass="lbTextoBoasVindas" text="TUDO SOBRE SEUS FILMES PREFERIDOS" />
         <Label fx:id="lbServicos" layoutX="57.0" layoutY="391.0" styleClass="lbTextoBoasVindas" text="AVALIAÇÕES, SINOPSES E MUITO MAIS" />
         <Line fx:id="lineWelcome" endX="83.0" layoutX="205.0" layoutY="328.0" startX="-151.0" stroke="#4717f6" strokeWidth="3.0" />
-        <Button fx:id="btnRegister" layoutX="57.0" layoutY="453.0" mnemonicParsing="false" onAction="#onClick" prefHeight="54.0" prefWidth="202.0" styleClass="btnRegister" text="Registrar-se" textFill="WHITE" />
         <Line endX="-100.0" endY="181.0" layoutX="1301.0" layoutY="309.0" startX="-100.0" startY="-80.0" stroke="#4717f6" strokeWidth="3.0" />
         <Circle fill="#4717f6" layoutX="1201.0" layoutY="283.0" radius="7.0" stroke="#4717f6" strokeType="INSIDE" />
         <Circle fill="#4717f6" layoutX="1201.0" layoutY="359.0" radius="7.0" stroke="#4717f6" strokeType="INSIDE" />
         <Circle fill="#4717f6" layoutX="1201.0" layoutY="435.0" radius="7.0" stroke="#4717f6" strokeType="INSIDE" />
-        <ImageView fitHeight="72.0" fitWidth="72.0" layoutX="514.0" layoutY="247.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@logo.png" />
-            </image>
-        </ImageView>
+      <JFXButton fx:id="btnRegister" layoutX="57.0" layoutY="453.0" onAction="#onClick" prefHeight="54.0" prefWidth="202.0" styleClass="btnRegister" text="Registrar-se" textFill="WHITE" />
     </children>
 </AnchorPane>
